--- a/2_rsdata/src/5_surface_reflectance_pull.Rmd
+++ b/2_rsdata/src/5_surface_reflectance_pull.Rmd
@@ -123,7 +123,7 @@ for x in range(0,len(filesUpFlt)):
   #(similar to for loop but faster and plays nice with earth engine.)
   invOut = ee.FeatureCollection([ee.Feature(ee.Geometry.Point([inv['long'][i],\
   inv['lat'][i]]),{'SiteID':inv['SiteID'][i],\
-  'date':inv['Date'][i],'sampDate':inv['SampDate'][i]}) for i in range(0,len(inv))]) 
+  'date':inv['date'][i],'date_unity':inv['date_unity'][i]}) for i in range(0,len(inv))]) 
   
   #Pull out the path/row from the file name
   path = int(filesUpFlt[x].replace('.','_').split('_')[0])
